--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-use-cart": "^1.13.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
